Dark theme: fix column-hedaers last child for window unfocused, some scrollbars tweakings.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
@@ -166,7 +166,9 @@ column-header:last-child .button:active:focus:hover,
 column-header.button:active:focus:last-child,
 column-header:last-child .button:active:focus,
 column-header.button:active:hover:last-child,
-column-header:last-child .button:active:hover {
+column-header:last-child .button:active:hover,
+column-header.button:window-unfocused:last-child,
+column-header:last-child .button:window-unfocused {
     border-image: none;
     border-width: 0;
 }
